# sitellm_vertebro

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .txt  ADMIN_DOCUMENTATION_INDEX.md  ADMIN_MONITORING_DOCUMENTATION.md  ADMIN_QUICK_REFERENCE.md  ANALYSIS_REMAINING_TASKS.md  AUTONOMOUS_COMPLETION_REPORT.md  AUTONOMOUS_MODE_FINAL_REPORT.md  AUTONOMOUS_MODE_PROGRESS.md  CHANGELOG.md  CODE_REVIEW.md  COMPLETION_CHECKLIST.md  COMPLETION_STATUS.md  CURRENT_PROGRESS.md  CURRENT_STATUS.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION.md  Dockerfile  FEATURES_COMPLETE.md  FINAL_PROGRESS_REPORT.md  FINAL_PROGRESS_SUMMARY.md  FINAL_PROJECT_STATUS.md  FINAL_STATUS.md  FINAL_STATUS_REPORT.md  FORM_VALIDATION_GUIDE.md  INTEGRATIONS_SETUP_GUIDE.md  NEXT_PHASE_PLAN.md  PROGRESS_REPORT.md  PROGRESS_UPDATE.md  PROJECT_COMPLETION_STATUS.md  PROJECT_PLAN.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QA_IMPORT_EDGE_CASES_ANALYSIS.md  QA_IMPORT_QUICK_FIXES.md  (+47 more)
.github/: dependabot.yml
additional/: upload_files_to_mongo.py
admin/: index.html  package-lock.json  package.json  vitest.config.js
api/: __init__.py  admin.py  backup.py  desktop.py
app/: __init__.py  main.py
backend/: __init__.py  adapters.py  auth.py  cache.py  cache_manager.py  crawler_reporting.py  csp.py  csrf.py  dependencies.py  gzip_middleware.py  llm_client.py  model_service.py  ollama.py  ollama_cluster.py  prompt.py  rate_limiting.py  security.py  settings.py  validators.py
backup/: __init__.py  service.py
connectors/: README.md  __init__.py
core/: __init__.py  build.py  status.py
crawler/: api.py  run_crawl.py  tasks.py
docker/: Dockerfile.tg_bot
docs/: architecture.rst  business_logic_overview.md  business_logic_workflow.rst  components.rst  conf.py  crawler_images.md  deploy.md  index.rst  knowledge_service.md  model-service.md  voice_api_reference.md  voice_deployment.md  voice_implementation_status.md  voice_quality_metrics.md  voice_quick_start.md  voice_sessions.md  widget_embed.md  workflows.rst
integrations/: __init__.py  bitrix.py  mail.py
knowledge/: __init__.py  summary.py  tasks.py  text.py
knowledge_service/: configuration.py  runner.py  service.py
max_bot/: __init__.py  config.py
observability/: logging.py  metrics.py
retrieval/: __init__.py  embedder.py  rerank.py  search.py
safety/: __init__.py  filter.py
scripts/: benchmark.py  bootstrap.sh  console_crawler_status.py  generate_self_signed_cert.sh  healthcheck.py  healthcheck.sh  install_model_service.sh  migrate_voice_schema.py  monitor.py  refactor_imports.py  refactor_move.sh  remote_deploy.sh  rollout.sh  run_local.sh  start-web.sh  start_uvicorn.sh  update_versions.py  wait_for.py
tests/: BROWSER_TESTING_COMPLETE.md  browser_test_results.md  browser_test_voice_dialogs.md  conftest.py  conftest_enhanced.py  test_admin_project_max.py  test_admin_project_telegram.py  test_admin_project_vk.py  test_api_attachments.py  test_api_logging.py  test_api_reading_endpoint.py  test_api_sources.py  test_backup_service.py  test_basic_auth.py  test_cache.py  test_crawl_async.py  test_crawler.py  test_crawler_filter.py  test_crawler_images.py  test_crawler_reporting.py  test_crawler_text.py  test_endpoints_stats.py  test_filter.py  (+30 more)
(+184 files in other folders)
