[project]
name = "yallm"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "asyncer>=0.0.8",
    "asyncify>=0.11.0",
    "celery>=5.5.3",
    "docx2txt>=0.9",
    "fastapi>=0.115.14",
    "fastapi-cli>=0.0.7",
    "huggingface-hub>=0.33.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-redis>=0.2.3",
    "llama-cpp-python>=0.3.9",
    "orjson>=3.10.18",
    "pydantic-settings>=2.10.1",
    "pymongo>=4.13.2",
    "pypdf>=5.7.0",
    "redis>=6.2.0",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "celery-types>=0.23.0",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]
