[project]
name = "yallm"
version = "0.1.1"
description = "Add your description here"
requires-python = ">=3.10,<3.13"
dependencies = [
    "asyncer>=0.0.8",
    "asyncify>=0.11.0",
    "celery>=5.5.3",
    "docx2txt>=0.9",
    "fastapi>=0.115.14",
    "fastapi-cli>=0.0.7",
    "rich>=13.7",
    "huggingface-hub>=0.33.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-redis>=0.2.3",
    "orjson>=3.10.18",
    "pydantic-settings>=2.2.1",
    "pymongo>=4.13.2",
    "pypdf>=5.7.0",
    "redis>=5.0.4",
    "uvicorn[standard]>=0.35.0",
    "httpx>=0.28.1",
    "aiogram>=3.5.0",
    "structlog>=24.1.0",
    # torch is pulled transitively by sentence-transformers; CPU wheels will be used
    "qdrant-client>=1.9.0",
    "aiohttp>=3.9.5",
    "uvloop>=0.17.0",
    "python-dotenv>=1.0.1",
    "sentence-transformers>=2.7.0",
    "nltk>=3.8.1",
    "prometheus-client>=0.20.0",
    "requests>=2.32,<3",
    "scikit-learn==1.4.2",
    "beautifulsoup4>=4.12,<5",
    "lxml>=5.2.0",
]

[dependency-groups]
dev = [
    "celery-types>=0.23.0",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]

[tool.poetry.source]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu/simple"
